--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -134,11 +134,11 @@ integral of the free electron density known the dispersion measure (DM). FRB
 events are observed to have dispersion measures of order $\sim\!\!1000\,{\rm pc}
 / {\rm cm}^3$, greatly in excess of the galactic expectation of order
 $\sim\!\!100\,{\rm pc} / {\rm cm}^3$ (depending on galactic latitude)
-\cite{2014arXiv1412.4829D}.  They thus appear to be of extragalactic origin,
-with their dispersion produced either by the intergalactic medium (IGM),
+\cite{2015MNRAS.451.4277D}.  They thus appear to be of extragalactic origin,
+with their dispersion produced either by the intergalactic medium,
 associated with structure along line of sight \citep{2013Sci...341...53T},
 or the environment of the
-source \citep{2014ApJ...785L..26L,2015arXiv150101341P,2015arXiv150505535C}.  If
+source \citep{2014ApJ...785L..26L,2015ApJ...807..179P,2015arXiv150505535C}.  If
 the dispersion is dominated by electrons along the line of sight, then the
 average dispersion--distance relation can be modeled
 \citep{2014ApJ...797...71Z,2004MNRAS.348..999I, 2003ApJ...598L..79I} and the
@@ -586,7 +586,7 @@ precise radial distances.
 
 In first measurements of the angular power spectra, uncertainty will be
 dominated by the finite number of observed events, or shot noise.
-The noise power spectrum on shells at a distance $\chi_i$ with width
+The noise power spectrum on shells at a distance $\chi_i$ and with width
 $\Delta \chi$ is
 \begin{equation}
     C^N_{\ell, ij} = \frac{\delta_{ij}}{\bar n_f(\chi_i)\chi_i^2\Delta\chi}.
