--- a/writeup/refs.bib
+++ b/writeup/refs.bib
@@ -447,7 +447,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{2008PhRvD..78l3506L,
-   author = {{Loverde}, M. and {Afshordi}, N.},
+   author = {{LoVerde}, M. and {Afshordi}, N.},
     title = "{Extended Limber approximation}",
   journal = {\prd},
 archivePrefix = "arXiv",
@@ -506,19 +506,23 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2014arXiv1412.4829D,
+@ARTICLE{2015MNRAS.451.4277D,
    author = {{Dolag}, K. and {Gaensler}, B.~M. and {Beck}, A.~M. and {Beck}, M.~C.
 	},
     title = "{Constraints on the distribution and energetics of fast radio bursts using cosmological hydrodynamic simulations}",
-  journal = {ArXiv e-prints},
+  journal = {\mnras},
 archivePrefix = "arXiv",
    eprint = {1412.4829},
- keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
-     year = 2014,
-    month = dec,
-   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1412.4829D},
+ keywords = {hydrodynamics, methods: numerical, intergalactic medium, large-scale structure of Universe, radio continuum: general},
+     year = 2015,
+    month = aug,
+   volume = 451,
+    pages = {4277-4289},
+      doi = {10.1093/mnras/stv1190},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.451.4277D},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{2004MNRAS.348..999I,
    author = {{Inoue}, S.},
@@ -568,17 +572,21 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2015arXiv150101341P,
+@ARTICLE{2015ApJ...807..179P,
    author = {{Pen}, U.-L. and {Connor}, L.},
     title = "{Local Circumnuclear Magnetar Solution to Extragalactic Fast Radio Bursts}",
-  journal = {ArXiv e-prints},
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {1501.01341},
  primaryClass = "astro-ph.HE",
- keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+ keywords = {Galaxy: center, pulsars: general, stars: magnetars},
      year = 2015,
-    month = jan,
-   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150101341P},
+    month = jul,
+   volume = 807,
+      eid = {179},
+    pages = {179},
+      doi = {10.1088/0004-637X/807/2/179},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...807..179P},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
