--- a/writeup/summary_krs.tex
+++ b/writeup/summary_krs.tex
@@ -15,7 +15,7 @@ One of the most challenging aspects of astronomy is determining distances to
 far-off objects. Newly discovered fast radio bursts---thought to originate from
 the far reaches of the Universe---provide distance measurements that may
 enable the largest structures of the cosmos to be studied in three dimensions.
-Traditionally cosmological distances are obtained using Doppler shifts, caused
+Traditionally cosmological distances are obtained using Doppler, caused
 by the Hubble expansion of the Universe. In contrast, delays to fast radio
 burst signals can be used to measure the total amount material between earth
 and the burst's source, permitting another way to determine distance.  However
