--- a/writeup/summary_krs.tex
+++ b/writeup/summary_krs.tex
@@ -1,7 +1,6 @@
 \documentclass{article}
 
-\title{Mysterious radio flashes could be used to trace Universe's largest
-structures}
+\title{Mysterious radio flashes could trace Universe's largest structures}
 
 \date{\today}
 
@@ -11,19 +10,6 @@ structures}
 
 \maketitle
 
-One of the most challenging aspects of astronomy is determining distances to
-far-off objects. Newly discovered fast radio bursts---thought to originate from
-the far reaches of the Universe---provide distance measurements that may
-enable the largest structures of the cosmos to be studied in three dimensions.
-Traditionally cosmological distances are obtained using Doppler, caused
-by the Hubble expansion of the Universe. In contrast, delays to fast radio
-burst signals can be used to measure the total amount material between earth
-and the burst's source, permitting another way to determine distance.  However
-this process isn't perfect, as intervening clumps of excess matter can distort the
-measured distance. This fact can be exploited to glean yet more
-information through these intervening structures.  Wide-field radio telescopes
-are expecting to detect thousands of these bursts, opening a new window for
-studying the cosmos.
-
+One fundamental aspect of astronomy is mapping the distances to far-off objects.  Newly discovered fast radio bursts---thought to originate from the far reaches of the cosmos---signal distance measurements that may enable the largest structures in the Universe to be studied in three dimensions.  Cosmological distances are traditionally determined using the redshift of photons induced by the expansion of the Universe.    In contrast, delays to fast radio bursts at different wavelengths tally the total amount of material between the burst and Earth, enabling a new  way to infer cosmological distance.  As cosmic matter distorts the inferred distances in a direction dependent way these dispersion distances don’t exactly match actual distances. However, these distortions reveal even more information about the intervening structure.  Wide-field radio telescopes could detect thousands of these bursts, opening a new window for studying the cosmos.
 
 \end{document}
