--- a/writeup/summary_krs.tex
+++ b/writeup/summary_krs.tex
@@ -10,6 +10,6 @@
 
 \maketitle
 
-One fundamental aspect of astronomy is mapping the distances to far-off objects.  Newly discovered fast radio bursts---thought to originate from the far reaches of the cosmos---signal distance measurements that may enable the largest structures in the Universe to be studied in three dimensions.  Cosmological distances are traditionally determined using the redshift of photons induced by the expansion of the Universe.    In contrast, delays to fast radio bursts at different wavelengths tally the total amount of material between the burst and Earth, enabling a new  way to infer cosmological distance.  As cosmic matter distorts the inferred distances in a direction dependent way these dispersion distances don’t exactly match actual distances. However, these distortions reveal even more information about the intervening structure.  Wide-field radio telescopes could detect thousands of these bursts, opening a new window for studying the cosmos.
+One fundamental aspect of astronomy is mapping the distances to far-off objects.  Newly discovered fast radio bursts---thought to originate from the far reaches of the cosmos---signal distance measurements that may enable the largest structures in the Universe to be studied in three dimensions.  Cosmological distances are traditionally determined using the redshift of photons induced by the expansion of the Universe.    In contrast, delays to fast radio bursts at different wavelengths tally the total amount of material between the burst and Earth, enabling a new  way to infer cosmological distance.  As cosmic matter distorts the inferred distances in a direction dependent way these dispersion distances don't exactly match actual distances. However, these distortions reveal even more information about the intervening structure.  Wide-field radio telescopes could detect thousands of these bursts, opening a new window for studying the cosmos.
 
 \end{document}
